# half_edge

./: .gitignore  README.md  pyproject.toml
src/half_edge/: __init__.py  model.py
